--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -20,6 +20,7 @@ jobs:
     - run: npm --version
     - run: npm install
     - run: npm test
+    - run: npm run lint
 
     # Save coverage report in Coveralls
     - name: Coveralls
