chore: add engines to package.json, module requires at least node 14.0.0

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "",
   "main": "mermaid-plan.js",
+  "engines": {
+    "node": ">14.0.0"
+  },
   "bin": {
     "mermaidplan": "mermaid-plan.js"
   },
