--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "mermaidplan": "mermaid-plan.js"
   },
   "scripts": {
-    "test": "tap --coverage-report=text --coverage-report=lcov --no-browser test/**/*.test.js",
-    "lint": "standard"
+    "test": "nyc node --test test/cli.test.js test/parseArguments.test.js test/planToMermaid.test.js",
+    "lint": "standard ."
   },
   "files": [
     "./mermaid-plan.js"
@@ -20,7 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "@dwp/govuk-casa": "^8.13.0",
-    "standard": "^17.1.0",
-    "tap": "^16.3.8"
+    "nyc": "^15.1.0",
+    "standard": "^17.1.0"
   }
 }
